Fixed pre responsiveness on mobile devices

--- a/resources/assets/sass/app/_common.scss
+++ b/resources/assets/sass/app/_common.scss
@@ -139,6 +139,10 @@ hr {
 }
 
 @include mobile {
+  .content pre{
+    white-space: pre-wrap;
+  }
+
   .hero {
     .section {
       h2 {
